2009-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/basics_dbus_glib/main.c:
	* docs/examples/basics_dbus_python/example.py: Call the D-Bus method 
	asynchronously instead of synchronously.
	* docs/book/C/telepathy.xml: Basics: Using D-Bus: Mention simple D-Bus 
	concepts. Mention asyncronous calls, and say how we do that in the 
	examples.
	Added an Installation chapter.
	Added an index and sprinkled some indexterm tags around to fill it.

2009-12-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Add a Language Bindings sub-section 
	as a way to mention telepathy-glib, which we use (so far) for all our 
	examples.

2009-12-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Move the boring stuff about 
	Introspect() into a notes section because it is too soon to get scary.

2009-12-20  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Write some text about optional 
	interfaces. Added a Connection Managers section before it, so that we 
	see the point and so we can describe the Telepathy architecture briefly.

	* docs/book/C/icons/: Put the .png files in the folder instead of above.
	* docs/book/C/figures/: Tried adding this again, adding a README because 
	git seems to ignore it if it is empty.

2009-12-20  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/basics_dbus_python/Makefile.am:
	* docs/examples/basics_dbus_python/example.py
	* docs/book/C/telepathy.xml: Basics: Add a little example of calling a 
	D-Bus method with Python.

	* docs/book/insert-example-code.py: Read .py files as well as .h and .cc 
	files.

2009-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/basics_dbus_glib/Makefile.am:
	* docs/examples/basics_dbus_glib/main.c
	* docs/book/C/telepathy.xml: Basics: Add a little example of calling a 
	D-Bus method with dbus-glib.

	* docs/book/C/icons/: